contracts/credit/tests/snapshots/gas_snap_freeze__freeze_credit_line_baseline.snap
---
source: contracts/credit/tests/gas_snap_freeze.rs
expression: sample
---
FreezeGasSample {
    entrypoint: "freeze_credit_line_baseline",
    cpu_instructions: 154157,
    memory_bytes: 21797,
}
