contracts/credit/tests/snapshots/gas_snap_freeze__freeze_credit_line_idempotent.snap
---
source: contracts/credit/tests/gas_snap_freeze.rs
expression: sample
---
FreezeGasSample {
    entrypoint: "freeze_credit_line_idempotent",
    cpu_instructions: 152523,
    memory_bytes: 20881,
}
