contracts/credit/tests/snapshots/gas_snap_freeze__freeze_credit_line_risk_investigation.snap
---
source: contracts/credit/tests/gas_snap_freeze.rs
expression: sample
---
FreezeGasSample {
    entrypoint: "freeze_credit_line_risk_investigation",
    cpu_instructions: 154157,
    memory_bytes: 21797,
}
