contracts/credit/tests/snapshots/gas_snap_freeze__freeze_draws_baseline.snap
---
source: contracts/credit/tests/gas_snap_freeze.rs
expression: sample
---
FreezeGasSample {
    entrypoint: "freeze_draws_baseline",
    cpu_instructions: 89229,
    memory_bytes: 13363,
}
