contracts/credit/tests/snapshots/gas_snap_freeze__freeze_draws_idempotent.snap
---
source: contracts/credit/tests/gas_snap_freeze.rs
expression: sample
---
FreezeGasSample {
    entrypoint: "freeze_draws_idempotent",
    cpu_instructions: 99576,
    memory_bytes: 15635,
}
