contracts/credit/tests/snapshots/gas_snap_freeze__get_credit_line_freeze_reason_none.snap
---
source: contracts/credit/tests/gas_snap_freeze.rs
expression: sample
---
FreezeGasSample {
    entrypoint: "get_credit_line_freeze_reason_none",
    cpu_instructions: 30602,
    memory_bytes: 5495,
}
