contracts/credit/tests/snapshots/gas_snap_freeze__get_credit_line_freeze_reason_some.snap
---
source: contracts/credit/tests/gas_snap_freeze.rs
expression: sample
---
FreezeGasSample {
    entrypoint: "get_credit_line_freeze_reason_some",
    cpu_instructions: 57112,
    memory_bytes: 8546,
}
